[package]
name = "sy-flood-client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
pnet = "0.35.0"
pnet_transport = "0.35.0"
rand = "0.9.2"

[profile.release]
lto = "thin"
codegen-units = 1

[build]
rustflags = ["-C", "target-cpu=native"]
